--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "devDependencies": {
     "@types/node": "^18.15.12",
-	"@types/jest": "^29.4.0",
-	"@types/uuid": "^9.0.0",
-	"jest": "^29.4.1",
-	"ts-node": "^10.9.1",
-	"ts-jest": "^29.0.5"
+    "@types/jest": "^29.4.0",
+    "@types/uuid": "^9.0.0",
+    "jest": "^29.4.1",
+    "ts-node": "^10.9.1",
+    "ts-jest": "^29.0.5"
   },
   "homepage": "https://github.com/adligo/junitXml.tests4j.ts.adligo.org#readme",
   "keywords": [
@@ -30,11 +30,16 @@
     "url": "git+https://github.com/adligo/junitXml.tests4j.ts.adligo.org.git"
   },
   "scripts": {
-	"test": "jest",
-    "tsc": "tsc"
+    "test": "jest",
+    "build": "tsc"
   },
-  "sharedNodeModuleProjectSLinkEnvVar": ["JUNIT_XML_NODE_MODULE_SLINK"],
-  "sharedNodeModuleProjectSLinks": ["slink_group_deps.ts.adligo.org", "fab_group_deps.ts.adligo.org"],
+  "sharedNodeModuleProjectSLinkEnvVar": [
+    "JUNIT_XML_NODE_MODULE_SLINK"
+  ],
+  "sharedNodeModuleProjectSLinks": [
+    "slink_group_deps.ts.adligo.org",
+    "fab_group_deps.ts.adligo.org"
+  ],
   "type": "module",
   "version": "0.0.1"
 }
