Well it's working locally lets send it through some Jenkins builds

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "lib": ["es6"],
+    "lib": [
+      "es6",
+      "DOM"
+    ],
     "target": "es6",
     "module": "commonjs",
     "moduleResolution": "node",
@@ -11,10 +14,11 @@
     "resolveJsonModule": true,
     "sourceMap": true
   },
-  "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "**/*.spec.ts"],
-  "ts-node": {
-    "esm": true,
-    "experimentalSpecifierResolution": "node"
-    }
- }
+  "include": [
+    "src/**/*.mts"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
+}
