--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "author": "Scott Morgan",
+  "bin": {
+    "junitXmlTests4jGenerator": "./dist/junitXmlTests4jGenerator.mjs"
+  },
   "bugs": {
     "url": "https://github.com/adligo/junitXml.tests4j.ts.adligo.org/issues"
   },
   "description": "This is the implementation of junitXml.tests4j.ts.adligo.org.",
   "dependencies": {
-    "typescript": "^5.0.4"
+    "npm": "^11.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.15.21",
-    "@types/jest": "^29.4.0",
-    "@types/uuid": "^9.0.0",
-    "jest": "^29.4.1",
-    "ts-node": "^10.9.1",
-    "ts-jest": "^29.0.5"
+    "typescript": "^5.0.4"
   },
   "homepage": "https://github.com/adligo/junitXml.tests4j.ts.adligo.org#readme",
   "keywords": [
@@ -24,14 +23,15 @@
     "typescript"
   ],
   "license": "Apache-2.0",
-  "name": "@junitXml.tests4j.ts.adligo.org",
+  "name": "@ts.adligo.org/junitXml.tests4j",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/adligo/junitXml.tests4j.ts.adligo.org.git"
   },
   "scripts": {
-    "test": "jest",
-    "build": "tsc"
+    "test": "echo @see the https://github.com/adligo/junitXml_tests.tests4j.ts.adligo.org project \n and https://github.com/adligo/slink_group.ts.adligo.org",
+    "build": "npm run tsc && slink -p -d",
+    "tsc": "tsc"
   },
   "sharedNodeModuleProjectSLinkEnvVar": [
     "JUNIT_XML_NODE_MODULE_SLINK"
